<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SinglePlayerActivity">

    <TextView
        android:id="@+id/instructions1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player_instructions_1"
        android:textSize="20sp"
        android:layout_gravity="start"/>

    <TextView
        android:id="@+id/instructions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player_instructions_2"
        android:textSize="20sp"
        android:layout_gravity="start"/>

    <TextView
        android:id="@+id/instructions3a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player_instructions_3"
        android:textSize="20sp"
        android:layout_gravity="start"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

<!--    <TextView-->
<!--        android:id="@+id/instructions3b"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/single_player_instructions_3_b"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_gravity="start"/>-->

    <!--    <androidx.preference.SwitchPreferenceCompat-->
    <!-- For some reason, ^this doesn't work^ even with the dependency added in Gradle -->
    <!-- Same thing when trying to add this:
    <SwitchPreference
    -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/hardSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_mode_label"
        android:textSize="20sp"
        android:visibility="visible" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/hybridSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hybrid_map_label"
        android:textSize="20sp"
        android:visibility="visible"
        />

</LinearLayout>