<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity" >
    <!-- xmlns:map="http://schemas.android.com/apk/res-auto" -->
    <fragment

        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />
    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_button_label"
        android:onClick="begin_click"
        />
    <Button
        android:id="@+id/startOverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_over_button_label"
        android:onClick="start_over_click"
        android:layout_alignBottom="@id/map"
        />
    <Button
        android:id="@+id/endButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_button_label"
        android:onClick="end_click"
        android:layout_alignBottom="@id/map"
        android:layout_alignParentRight="true"/>
</RelativeLayout>